--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,14 @@ version: '2'
 services:
   app:
     build: .
+    working_dir: /app
     command: php artisan serve  --host=0.0.0.0 --port=8000
     volumes:
       - .:/app
     links:
       - database
     ports:
-      - "80:8000"
+      - "8000:8000"
     depends_on:
       - database
   database:
